# clinical-rag-pipeline

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  config.py  main.py
api/models/: schemas.py
api/rag/: llm_client.py  prompt_templates.py  retriever.py
api/routers/: alerts.py  metrics.py
dags/: embedding_pipeline_dag.py  patient_ingestion_dag.py  sofa_scoring_dag.py
data/scripts/: verify_mimic.py
embeddings/: chunker.py  embedder.py  pgvector_loader.py
infra/airflow/: Dockerfile
infra/postgres/: init.sql
monitoring/grafana/dashboards/: llmops_dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboards.yaml
monitoring/grafana/provisioning/datasources/: prometheus.yaml
monitoring/prometheus/: prometheus.yml
spark/: sofa_summary.py
spark/jobs/: bronze_ingest.py  gold_sofa_score.py  silver_transform.py
spark/utils/: spark_session.py
tests/: conftest.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_llm_client.py  test_sofa_scoring.py
